# rwa-chatbot-api

./: .gitignore  DATABASE_CONFIG.md  N8N_INTEGRATION_GUIDE.md  Procfile  README.md  RENDER_DEPLOYMENT.md  RWA Pharmacy Logo Landscape (cmyk).ai  RWA_ADELE_README.md  SETUP_GUIDE.md  add_module_description.py  embed.py  enhance_descriptions.py  enhanced_chat_api.py  env_template.txt  example_description.py  index.html  index_site.py  pyproject.toml  requirements-python313.txt  requirements-render.txt  requirements-simple.txt  requirements-wheels-only.txt  requirements.txt  script.js  setup_database.py  setup_database.sql  styles.css  test_agent.py
RWA ChatBot Docs/: 13.20 NMS Review.docx  4.60 Electronic Repeat Dispensing.docx  Benchmarking.docx  Branch Productivity.docx  Care Homes.docx  Claim Prep.docx  Dead Stock.docx  Exemptions & Dispensing Exceptions.docx  Financials.docx  Nominations.docx  Overdue Patients.docx  PQS_Clinical_Health_Patient_Services.docx  Patient Operations.docx  Patient_Services.docx  Payment Reconciliation.docx  Performance Management _1.05 Executive Monthly Dashboard.docx  Performance Management _1.45 Branch_Monthly_Reports.docx  Performance Management _1.80 Branch_Weekly_Reports.docx  Performance Management _1.85 Company_Weekly_Report.docx  Performance Management _1.85 Weekly_Company_by_Branch_Report.docx  Performance Management _13.05_Weekly_Services_Report.docx  Profiling.docx  Script Compliance.docx  Supply Chain.docx  Surgery Analysis.docx
src/: __init__.py
src/agent/: __init__.py  rwa_agent.py
src/api/: chat_api.py  search_api.py
(+16 files in other folders)
