[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rwa-chatbot-api"
version = "1.0.0"
description = "RWA Adele Chatbot API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "psycopg2-binary==2.9.9",
    "SQLAlchemy==2.0.23",
    "pgvector==0.2.4",
    "openai==1.3.0",
    "langchain==0.1.0",
    "langchain-openai==0.0.5",
    "langchain-community==0.0.10",
    "sentence-transformers==2.2.2",
    "nltk==3.8.1",
    "rank-bm25==0.2.2",
    "rich==13.7.0",
    "numpy==1.24.3",
    "urllib3==2.0.7"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
